--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-  - lib/assets/image/
+  - assets/image/
 
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
@@ -79,15 +79,15 @@ flutter:
   fonts:  
     - family: Montserrat-Bold
       fonts:
-        - asset: lib\assets\fonts\Montserrat-Bold.ttf
+        - asset: assets/fonts/Montserrat-Bold.ttf
 
     - family: Montserrat-Italic
       fonts:
-        - asset: lib\assets\fonts\Montserrat-Italic.ttf
+        - asset: assets/fonts/Montserrat-Italic.ttf
 
     - family: Montserrat-Regular
       fonts:
-        - asset: lib\assets\fonts\Montserrat-Regular.ttf
+        - asset: assets/fonts/Montserrat-Regular.ttf
         
 
 
