added bloc,cubit in login,dashboard,onboarding

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,13 @@ dependencies:
   cupertino_icons: ^1.0.8
   get_it: ^8.0.3
   animate_do: ^3.3.4
+  bloc: ^9.0.0
+  flutter_bloc: ^9.0.0
+  equatable: ^2.0.7
+  hive_flutter: ^1.1.0
+  shared_preferences: ^2.3.5
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.14
 
 dev_dependencies:
   flutter_test:
