--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
-name: sprint_1
+name: beauty_booking_app
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -31,19 +31,34 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  get_it: ^8.0.3
-  animate_do: ^3.3.4
-  bloc: ^9.0.0
-  flutter_bloc: ^9.0.0
-  equatable: ^2.0.7
+  another_flushbar: ^1.12.30
+  dio: ^5.7.0
   hive_flutter: ^1.1.0
-  shared_preferences: ^2.3.5
-  hive_generator: ^2.0.1
-  build_runner: ^2.4.14
+  pretty_dio_logger: ^1.4.0
+  shared_preferences: ^2.3.4
+  multi_select_flutter: ^4.1.3
+  uuid: ^4.5.1
+  dartz: ^0.10.1
+  path_provider: ^2.1.5
+  equatable: ^2.0.7
+  image_picker: ^1.1.2
+  awesome_dio_interceptor: ^1.3.0
+  json_annotation: ^4.9.0
+  connectivity_plus: ^6.1.1
+  permission_handler: ^11.3.1
+  json_serializable: ^6.9.0
+  get_it: ^8.0.3
+  bloc: ^8.1.4
+  flutter_svg: ^2.0.17
+  lottie: ^3.3.1
+  flutter_bloc: ^8.1.6
+  test_cov_console: ^0.2.2
+  mocktail: ^1.0.4
+  bloc_test: ^9.1.7
+  test: ^1.25.8
 
 dev_dependencies:
   flutter_test:
@@ -54,14 +69,15 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
+  build_runner: ^2.4.14
+  hive_generator: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -69,38 +85,19 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-  - assets/image/
+    - assets/images/
+    - assets/animations/
+    - assets/fonts/
 
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/to/resolution-aware-images
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/to/asset-from-package
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  fonts:  
-    - family: Montserrat-Bold
+  fonts:
+    - family: Montserrat
       fonts:
         - asset: assets/fonts/Montserrat-Bold.ttf
-
-    - family: Montserrat-Italic
-      fonts:
         - asset: assets/fonts/Montserrat-Italic.ttf
-
-    - family: Montserrat-Regular
-      fonts:
         - asset: assets/fonts/Montserrat-Regular.ttf
-        
 
-
-
+  # fonts:
+  #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
