--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   mocktail: ^1.0.4
   bloc_test: ^9.1.7
   test: ^1.25.8
+  animate_do: ^4.2.0
 
 dev_dependencies:
   flutter_test:
