--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,16 +58,14 @@ dependencies:
   test_cov_console: ^0.2.2
   mocktail: ^1.0.4
   bloc_test: ^9.1.7
-<<<<<<< HEAD
   google_fonts: ^6.2.1
   animate_do: ^4.2.0
   sensors_plus: ^6.1.1
   http: ^1.3.0
   intl: ^0.20.2
-=======
   test: ^1.25.8
-  animate_do: ^4.2.0
->>>>>>> 801188ae45bf0a7a08204fba3dc9caf3f4e47f95
+  proximity_sensor: ^1.3.8
+  mockito: ^5.4.5
 
 dev_dependencies:
   flutter_test:
