--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   proximity_sensor: ^1.3.8
   mockito: ^5.4.5
   flutter_launcher_icons: ^0.14.3
+  coverage: ^1.11.1
 
 dev_dependencies:
   flutter_test:
